[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Greg Burri <greg.burri@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
threadpool = "1.8"
regex = "1"
num = "0.4"
num_enum = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1