[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Greg Burri <greg.burri@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
regex = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1